Try to fiw issue on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,8 @@
 @use 'constants';
 
 .App {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
   text-align: center;
 }
